Moved post moderation menu right to avoid positioning issues on narrow screens

--- a/client/forum/blocks/posts_list/posts_list.styl
+++ b/client/forum/blocks/posts_list/posts_list.styl
@@ -138,13 +138,6 @@ asideSizeSm = 50px
     .short
       display inline-block
 
-// Flip moderator menu to left if < 3 buttons at rignt side
-// http://alistapart.com/article/quantity-queries-for-css
-li.forum-post__mod-menu:nth-last-child(-n + 4)
-  .dropdown-menu
-    left auto
-    right 0
-
 //
 // Hovering magick
 //
